[package]
authors    = ["Reverier-Xu <reverier.xu@woooo.tech>"]
edition    = "2021"
name       = "ret2traffic"
repository = "https://github.com/ret2shell/ret2traffic"
version    = "0.1.0"

[profile.release]
codegen-units = 1
lto           = "thin"
opt-level     = 3
panic         = "abort"
strip         = true

[dependencies]
chrono             = { version = "0.4", features = ["serde"] }
clap               = { version = "4.5", features = ["derive"] }
colored            = "3.0"
rustls             = { version = "0.23", features = ["ring"] }
tokio              = { version = "1.0", features = ["full"] }
tracing            = "0.1"
tracing-appender   = "0.2"
tracing-core       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dependencies.axum]
features = ["ws", "http2", "tower-log", "tracing", "multipart", "macros"]
version  = "0.8"

[dependencies.tower]
features = ["limit"]
version  = "0.5"

[dependencies.tower-http]
features = ["cors", "fs", "trace"]
version  = "0.6"

[dependencies.axum-extra]
features = [
  "typed-header",
  "query",
  "multipart",
  "typed-routing",
  "async-read-body",
]
version = "0.10"

[build-dependencies]
build-target  = "0.8"
git-version   = "0.3"
rustc_version = "0.4"
